[project]
name = "maison"
version = "0.1.0"
description = "Run Claude Code safely inside Daytona sandboxes"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "daytona>=0.100.0",
    "eval_type_backport>=0.2.0; python_version < '3.10'",
]

[project.scripts]
maison-cli = "maison.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"
