[project]
name = "claude-maison"
version = "0.1.0"
description = "Run Claude Code safely inside Daytona sandboxes"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "daytona>=0.100.0",
]

[project.scripts]
maison-cli = "maison.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
